feat: add api endpoint to create new user
